crates/rome_js_formatter/tests/specs/prettier/typescript/keywords/keywords.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\keywords\\keywords.ts"
---

# Input

```js
// All of these should be an error

module Y3 {
    public module Module {
        class A { s: string }
    }

    // Apparently this parses :P
    export private public protected static readonly abstract async enum X { }

    interface x {
        export private static readonly [x: any]: any;
    }
}

module Y4 {
    public enum Color { Blue, Red }
}

module YY3 {
    private module Module {
        class A { s: string }
    }
}

module YY4 {
    private enum Color { Blue, Red }
}

module YYY3 {
    static module Module {
        class A { s: string }
    }
}

module YYY4 {
    static enum Color { Blue, Red }
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,29 +1,37 @@
 // All of these should be an error
 
 module Y3 {
-  public module Module {
+  public
+  module Module {
     class A {
       s: string;
     }
   }
 
   // Apparently this parses :P
-  export private public protected static readonly abstract async enum X {}
+  export
+  private
+  public
+  protected
+  static
+  readonly;
+  abstract;
+  async;
+  enum X {}
 
   interface x {
-    export private static readonly [x: any]: any;
-  }
+        export private static readonly [x: any]: any;
+    }
 }
 
 module Y4 {
-  public enum Color {
-    Blue,
-    Red,
-  }
+  public
+  enum Color { Blue, Red }
 }
 
 module YY3 {
-  private module Module {
+  private
+  module Module {
     class A {
       s: string;
     }
@@ -31,14 +39,13 @@
 }
 
 module YY4 {
-  private enum Color {
-    Blue,
-    Red,
-  }
+  private
+  enum Color { Blue, Red }
 }
 
 module YYY3 {
-  static module Module {
+  static
+  module Module {
     class A {
       s: string;
     }
@@ -46,8 +53,6 @@
 }
 
 module YYY4 {
-  static enum Color {
-    Blue,
-    Red,
-  }
+  static
+  enum Color { Blue, Red }
 }
```

# Output

```js
// All of these should be an error

module Y3 {
  public
  module Module {
    class A {
      s: string;
    }
  }

  // Apparently this parses :P
  export
  private
  public
  protected
  static
  readonly;
  abstract;
  async;
  enum X {}

  interface x {
        export private static readonly [x: any]: any;
    }
}

module Y4 {
  public
  enum Color { Blue, Red }
}

module YY3 {
  private
  module Module {
    class A {
      s: string;
    }
  }
}

module YY4 {
  private
  enum Color { Blue, Red }
}

module YYY3 {
  static
  module Module {
    class A {
      s: string;
    }
  }
}

module YYY4 {
  static
  enum Color { Blue, Red }
}
```


# Errors
```
keywords.ts:4:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of reserved keyword `public` as an identifier in strict mode
  
    ┌─ keywords.ts:4:5
    │
  4 │     public module Module {
    │     ^^^^^^
  
keywords.ts:4:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ keywords.ts:4:12
    │
  4 │     public module Module {
    │            ^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ keywords.ts:4:5
    │
  4 │     public module Module {
    │     ^^^^^^^^^^^^^
  
keywords.ts:9:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a class, a function, or a variable declaration but instead found 'private'
  
  × Expected a class, a function, or a variable declaration here
  
    ┌─ keywords.ts:9:12
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │            ^^^^^^^
  
keywords.ts:9:20 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ keywords.ts:9:20
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                    ^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ keywords.ts:9:12
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │            ^^^^^^^^^^^^^^
  
keywords.ts:9:27 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ keywords.ts:9:27
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                           ^^^^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ keywords.ts:9:20
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                    ^^^^^^^^^^^^^^^^
  
keywords.ts:9:37 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ keywords.ts:9:37
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                     ^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ keywords.ts:9:27
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                           ^^^^^^^^^^^^^^^^
  
keywords.ts:9:44 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ keywords.ts:9:44
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                            ^^^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ keywords.ts:9:37
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                     ^^^^^^^^^^^^^^^
  
keywords.ts:9:53 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ keywords.ts:9:53
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                                     ^^^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ keywords.ts:9:44
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                            ^^^^^^^^^^^^^^^^^
  
keywords.ts:9:62 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ keywords.ts:9:62
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                                              ^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ keywords.ts:9:53
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                                     ^^^^^^^^^^^^^^
  
keywords.ts:9:68 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ keywords.ts:9:68
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                                                    ^^^^
  
  i ...Which is required to end this statement
  
    ┌─ keywords.ts:9:62
    │
  9 │     export private public protected static readonly abstract async enum X { }
    │                                                              ^^^^^^^^^^
  
keywords.ts:12:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × ';' expected'
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ keywords.ts:12:16
     │
  12 │         export private static readonly [x: any]: any;
     │                ^^^^^^^
  
keywords.ts:12:24 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × index signature members cannot be static
  
     ┌─ keywords.ts:12:24
     │
  12 │         export private static readonly [x: any]: any;
     │                        ^^^^^^
  
keywords.ts:17:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of reserved keyword `public` as an identifier in strict mode
  
     ┌─ keywords.ts:17:5
     │
  17 │     public enum Color { Blue, Red }
     │     ^^^^^^
  
keywords.ts:17:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ keywords.ts:17:12
     │
  17 │     public enum Color { Blue, Red }
     │            ^^^^
  
  i ...Which is required to end this statement
  
     ┌─ keywords.ts:17:5
     │
  17 │     public enum Color { Blue, Red }
     │     ^^^^^^^^^^^
  
keywords.ts:21:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of reserved keyword `private` as an identifier in strict mode
  
     ┌─ keywords.ts:21:5
     │
  21 │     private module Module {
     │     ^^^^^^^
  
keywords.ts:21:13 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ keywords.ts:21:13
     │
  21 │     private module Module {
     │             ^^^^^^
  
  i ...Which is required to end this statement
  
     ┌─ keywords.ts:21:5
     │
  21 │     private module Module {
     │     ^^^^^^^^^^^^^^
  
keywords.ts:27:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of reserved keyword `private` as an identifier in strict mode
  
     ┌─ keywords.ts:27:5
     │
  27 │     private enum Color { Blue, Red }
     │     ^^^^^^^
  
keywords.ts:27:13 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ keywords.ts:27:13
     │
  27 │     private enum Color { Blue, Red }
     │             ^^^^
  
  i ...Which is required to end this statement
  
     ┌─ keywords.ts:27:5
     │
  27 │     private enum Color { Blue, Red }
     │     ^^^^^^^^^^^^
  
keywords.ts:31:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of reserved keyword `static` as an identifier in strict mode
  
     ┌─ keywords.ts:31:5
     │
  31 │     static module Module {
     │     ^^^^^^
  
keywords.ts:31:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ keywords.ts:31:12
     │
  31 │     static module Module {
     │            ^^^^^^
  
  i ...Which is required to end this statement
  
     ┌─ keywords.ts:31:5
     │
  31 │     static module Module {
     │     ^^^^^^^^^^^^^
  
keywords.ts:37:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of reserved keyword `static` as an identifier in strict mode
  
     ┌─ keywords.ts:37:5
     │
  37 │     static enum Color { Blue, Red }
     │     ^^^^^^
  
keywords.ts:37:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ keywords.ts:37:12
     │
  37 │     static enum Color { Blue, Red }
     │            ^^^^
  
  i ...Which is required to end this statement
  
     ┌─ keywords.ts:37:5
     │
  37 │     static enum Color { Blue, Red }
     │     ^^^^^^^^^^^
  

```


